--- a/demos/benchmark/package.json
+++ b/demos/benchmark/package.json
@@ -12,12 +12,12 @@
     "@babel/standalone": "^7.22.4",
     "@openinula/next": "workspace:*",
     "@iandx/easy-css": "^0.10.14",
-    "babel-preset-inula-next": "workspace:*"
+    "@openinula/babel-preset-inula-next": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
-    "vite-plugin-inula-next": "workspace:*"
+    "@openinula/vite-plugin-inula-next": "workspace:*"
   },
   "keywords": [
     "inula-next"
