--- a/demos/v2/package.json
+++ b/demos/v2/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,15 +10,13 @@
   },
   "dependencies": {
     "@babel/standalone": "^7.22.4",
-    "@iandx/easy-css": "^0.10.14",
-    "@openinula/next": "workspace:*",
-    "babel-preset-inula-next": "workspace:*",
+    "@openinula/next": "0.0.2",
+    "@openinula/vite-plugin-inula-next": "0.0.4",
     "classnames": "^2.5.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-plugin-inula-next": "workspace:*"
+    "vite": "^4.4.9"
   },
   "keywords": [
     "inula-next"
