--- a/packages/transpiler/view-generator/package.json
+++ b/packages/transpiler/view-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openinula/view-generator",
-  "version": "1.0.0-next.2",
+  "version": "0.0.2",
   "description": "InulaNext View Generator given different types of reactivity units",
   "keywords": [
     "Inula-Next"
