feat: 修改代码编译报错

--- a/packages/inula-intl/package.json
+++ b/packages/inula-intl/package.json
@@ -35,8 +35,8 @@
     "html-webpack-plugin": "^5.5.1",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^21.1.1",
-    "react": "18.2.0-h3",
-    "react-dom": "18.2.0-h3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-visualizer": "^5.10.0",
