--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "6.18.1",
+    "@babel/parser": "^7.24.7",
+    "magic-string": "^0.30.10",
     "babel-jest": "^29.7.0",
     "ejs": "^3.1.8",
     "eslint": "^8.56.0",
@@ -79,6 +81,8 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
   },
