--- a/packages/inula-router/package.json
+++ b/packages/inula-router/package.json
@@ -21,6 +21,7 @@
   ],
   "license": "MulanPSL2",
   "devDependencies": {
+    "@cloudsop/horizon": "^0.0.58",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
