feat: inula-next-type

--- a/packages/inula-next/tsconfig.json
+++ b/packages/inula-next/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
-    "jsx": "preserve",
+    "declaration": true,
     "target": "ESNext",
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": []  // 不包含 node 类型
   },
   "ts-node": {
     "esm": true
-  }
+  },
+  "include": ["src",
+    "types"
+  ]
 }
