--- a/packages/inula-next/package.json
+++ b/packages/inula-next/package.json
@@ -12,14 +12,26 @@
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./jsx-runtime": {
+      "types": "./jsx-runtime.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsup --sourcemap",
-    "test": "vitest --ui"
+    "test": "vitest --ui",
+    "typecheck": "tsc --noEmit",
+    "types": "tsc --emitDeclarationOnly --outDir build"
   },
   "dependencies": {
     "csstype": "^3.1.3",
-    "@openinula/next-shared": "workspace:*"
+    "@openinula/next-shared": "workspace:*",
+    "@inula/types": "^0.0.1"
   },
   "devDependencies": {
     "tsup": "^6.5.0",
@@ -36,6 +48,11 @@
     ],
     "clean": true,
     "minify": false,
-    "noExternal": ["@openinula/next-shared"]
+    "noExternal": [
+      "@openinula/next-shared"
+    ],
+    "dts": {
+      "resolve": true
+    }
   }
 }
