--- a/packages/inula-next/package.json
+++ b/packages/inula-next/package.json
@@ -30,8 +30,7 @@
   },
   "dependencies": {
     "csstype": "^3.1.3",
-    "@openinula/next-shared": "workspace:*",
-    "@inula/types": "^0.0.1"
+    "@openinula/next-shared": "workspace:*"
   },
   "devDependencies": {
     "tsup": "^6.5.0",
