--- a/packages/inula-next2.1/package.json
+++ b/packages/inula-next2.1/package.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "tsup": "^6.5.0",
     "vitest": "2.0.5",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "@openinula/vite-plugin-inula-next": "workspace:*"
   },
   "tsup": {
     "entry": [
