--- a/packages/transpiler/vite-plugin-inula-next/package.json
+++ b/packages/transpiler/vite-plugin-inula-next/package.json
@@ -17,6 +17,7 @@
     "build": "tsup --sourcemap"
   },
   "devDependencies": {
+    "@babel/code-frame": "^7.26.2",
     "@types/babel__core": "^7.20.5",
     "tsup": "^6.5.0",
     "typescript": "^5.3.2",
