--- a/packages/transpiler/babel-inula-next-core/package.json
+++ b/packages/transpiler/babel-inula-next-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openinula/babel-preset-inula-next",
-  "version": "0.0.0-SNAPSHOT",
+  "version": "0.0.5",
   "keywords": [
     "Inula-Next",
     "babel-preset"
@@ -56,5 +56,8 @@
       "esm"
     ],
     "clean": true
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
