ci: declare packageManager

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "OpenInula is a JavaScript framework library.",
   "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@10.4.1",
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "lint-commit": "lint-staged",
