--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .ts --fix",
     "lint-commit": "lint-staged",
     "prettier": "prettier .prettierrc.js -w packages/**/*.{ts,tsx,js,jsx}",
+    "build": "turbo build",
     "build:inula": "pnpm -F openinula build",
     "test:inula": "pnpm -F openinula test",
     "test:inula-intl": "pnpm -F inula-intl test",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.23.7",
+    "@babel/parser": "^7.24.7",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "7.20.7",
@@ -63,8 +65,6 @@
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "6.18.1",
-    "@babel/parser": "^7.24.7",
-    "magic-string": "^0.30.10",
     "babel-jest": "^29.7.0",
     "ejs": "^3.1.8",
     "eslint": "^8.56.0",
@@ -76,15 +76,17 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
+    "magic-string": "^0.30.10",
     "openinula": "workspace:*",
     "prettier": "^3.1.1",
     "rollup": "^2.79.1",
     "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-execute": "^1.1.1",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-esbuild": "^6.1.1",
+    "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-polyfill-node": "^0.13.0",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.1.1",
+    "turbo": "^2.4.2",
     "typescript": "^4.9.5"
   },
   "engines": {
