--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,5 @@
 packages:
   # all packages in direct subdirs of packages/
   - 'packages/*'
+  # exclude inula-dev-tools temporarily
+  - '!packages/inula-dev-tools'
