--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm build --withTypes
+        run: pnpm build
 
       - name: Release
         run: pnpx pkg-pr-new publish --compact --pnpm './packages/*'
