chore: changeset init

--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,12 @@
         "dist/**"
       ]
     },
+    "test": {
+      "dependsOn": [
+        "^test"
+      ],
+      "outputs": []
+    },
     "typecheck": {
       "dependsOn": [
         "^typecheck"
