--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint-commit": "lint-staged",
     "prettier": "prettier .prettierrc.js -w packages/**/*.{ts,tsx,js,jsx}",
     "build": "turbo build",
+    "release": "pnpm run build && changeset publish",
+    "test": "turbo test",
     "build:inula": "pnpm -F openinula build",
     "test:inula": "pnpm -F openinula test",
     "test:inula-intl": "pnpm -F inula-intl test",
