--- a/demos/v2/package.json
+++ b/demos/v2/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.6",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@babel/standalone": "^7.22.4",
-    "@openinula/next": "0.0.2",
-    "@openinula/vite-plugin-inula-next": "0.0.4",
+    "@openinula/next": "workspace:*",
+    "@openinula/vite-plugin-inula-next": "workspace:*",
     "classnames": "^2.5.1"
   },
   "devDependencies": {
