--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "OpenInula is a JavaScript framework library.",
   "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "lint-commit": "lint-staged",
@@ -17,8 +18,10 @@
     "build:inula-request": "pnpm -F inula-request build",
     "build:inula-router": "pnpm -F inula-router build",
     "build:transpiler": "pnpm --filter './packages/transpiler/*' run build",
+    "build:inula-next": "pnpm -F inula-next build",
     "commitlint": "commitlint --config commitlint.config.js -e",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "publish": "changeset publish"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
