--- a/packages/inula-bridge/package.json
+++ b/packages/inula-bridge/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@openinula/bridge",
   "version": "0.0.1",
+  "private": true,
   "keywords": [
     "inula"
   ],
@@ -38,7 +39,7 @@
   },
   "devDependencies": {
     "@openinula/next": "workspace:*",
-    "openinula": "0.0.4",
+    "openinula": "^0.1.0",
     "tsup": "^6.5.0",
     "vite": "^5.4.10",
     "vitest": "2.0.5"
