--- a/packages/transpiler/vite-plugin-inula-next/package.json
+++ b/packages/transpiler/vite-plugin-inula-next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openinula/vite-plugin-inula-next",
-  "version": "0.0.4",
+  "version": "0.0.7",
   "keywords": [
     "Inula-Next",
     "vite-plugin"
@@ -17,13 +17,13 @@
     "build": "tsup --sourcemap"
   },
   "devDependencies": {
-    "@babel/code-frame": "^7.26.2",
     "@types/babel__core": "^7.20.5",
     "tsup": "^6.5.0",
     "typescript": "^5.3.2",
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "@babel/code-frame": "^7.26.2",
     "@babel/core": "^7.20.12",
     "@openinula/babel-preset-inula-next": "workspace:*",
     "minimatch": "^9.0.3"
@@ -37,5 +37,8 @@
     ],
     "clean": true,
     "dts": true
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
