fix: compiler type error

--- a/packages/transpiler/error-handler/tsconfig.json
+++ b/packages/transpiler/error-handler/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
+    "skipLibCheck": true,
     "strict": true
   },
   "ts-node": {
