--- a/packages/transpiler/babel-inula-next-core/tsconfig.json
+++ b/packages/transpiler/babel-inula-next-core/tsconfig.json
@@ -7,6 +7,7 @@
       "DOM"
     ],
     "moduleResolution": "Node",
+    "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true
   },
