--- a/packages/transpiler/reactivity-parser/tsconfig.json
+++ b/packages/transpiler/reactivity-parser/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "Node",
     "strict": true,
+    "skipLibCheck": true,
     "esModuleInterop": true
   },
   "ts-node": {
