--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run unit tests
         run: |
+          # TODO: replace with pnpm run test
           pnpm run -F openinula test
           pnpm run -F inula-request test
-          pnpm run -F inula-router test
           pnpm run -F inula-intl test
