--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ permissions:
 jobs:
   unit-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
 
@@ -25,7 +26,4 @@ jobs:
 
       - name: Run unit tests
         run: |
-          # TODO: replace with pnpm run test
-          pnpm run -F openinula test
-          pnpm run -F inula-request test
-          pnpm run -F inula-intl test
+         pnpm run test
