--- a/packages/inula-request/package.json
+++ b/packages/inula-request/package.json
@@ -18,7 +18,7 @@
   "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://gitee.com/openInula/inula.git"
   },
   "keywords": [
     "inula-request"
