ci: update repo url

--- a/packages/inula-cli/package.json
+++ b/packages/inula-cli/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "git+https://gitee.com/openInula/inula.git"
+    "url": "git+https://github.com/openInula/inula.git"
   },
   "license": "MulanPSL2",
   "type": "module",
