--- a/packages/inula-router/package.json
+++ b/packages/inula-router/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://gitee.com/openInula/inula.git"
+    "url": "git+https://github.com/openInula/inula.git"
   },
   "scripts": {
     "test": "jest",
