--- a/packages/create-inula/package.json
+++ b/packages/create-inula/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitee.com/openInula/inula.git"
+    "url": "git+https://github.com/openInula/inula.git"
   },
   "engines": {
     "node": ">= 18.0.0"
