--- a/packages/inula-intl/package.json
+++ b/packages/inula-intl/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitee.com/openInula/inula.git"
+    "url": "git+https://github.com/openInula/inula.git"
   },
   "files": [
     "/build"
