--- a/packages/inula/package.json
+++ b/packages/inula/package.json
@@ -4,14 +4,14 @@
   "keywords": [
     "openinula"
   ],
-  "version": "0.0.4",
+  "version": "0.1.3",
   "homepage": "",
   "bugs": "",
   "license": "MulanPSL2",
   "main": "./build/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://gitee.com/openInula/inula.git"
+    "url": "git+https://github.com/openInula/inula.git"
   },
   "engines": {
     "node": ">=0.10.0"
