fix: unplugin type

--- a/demos/v2/package.json
+++ b/demos/v2/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/standalone": "^7.22.4",
     "@openinula/next": "workspace:*",
-    "@openinula/vite-plugin-inula-next": "workspace:*",
+    "@openinula/unplugin": "workspace:*",
     "classnames": "^2.5.1",
     "inula-router": "workspace:*"
   },
