--- a/packages/create-inula/lib/generators/Next-app/templates/webpack/package.json
+++ b/packages/create-inula/lib/generators/Next-app/templates/webpack/package.json
@@ -10,16 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/code-frame": "^7.26.2",
-    "@openinula/next": "^0.0.5",
-    "minimatch": "^9.0.3"
+    "@openinula/next": "^0.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
     "@openinula/babel-preset-inula-next": "^0.0.3",
-    "@openinula/inula-next-loader": "^0.0.1",
+    "@openinula/unplugin": "^0.0.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
