feat: update package.json

--- a/packages/inula-intl/package.json
+++ b/packages/inula-intl/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.9.4",
-    "openinula": "^0.0.58",
+    "openinula": "^0.1.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -37,8 +37,8 @@
     "html-webpack-plugin": "^5.5.1",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^21.1.1",
-    "react": "18.2.0-h3",
-    "react-dom": "18.2.0-h3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-visualizer": "^5.10.0",
