chore: add license in pkg.json

--- a/packages/inula-intl/package.json
+++ b/packages/inula-intl/package.json
@@ -22,7 +22,7 @@
   ],
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MulanPSL2",
   "peerDependencies": {
     "openinula": ">=0.0.10"
   },
