--- a/packages/inula-request/package.json
+++ b/packages/inula-request/package.json
@@ -26,7 +26,7 @@
     "inula-request"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MulanPSL2",
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-env": "^7.26.0",
