--- a/packages/create-inula/lib/generators/Simple-app/templates/vite/package.json
+++ b/packages/create-inula/lib/generators/Simple-app/templates/vite/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MulanPSL2",
   "dependencies": {
     "openinula": "^0.1.1"
   },
