--- a/packages/create-inula/lib/generators/Simple-app/templates/webpack/package.json
+++ b/packages/create-inula/lib/generators/Simple-app/templates/webpack/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MulanPSL2",
   "dependencies": {
     "openinula": "^0.1.1"
   },
