--- a/packages/inula-cli/package.json
+++ b/packages/inula-cli/package.json
@@ -17,7 +17,7 @@
     "tsconfig.json"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MulanPSL2",
   "type": "module",
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
