--- a/packages/inula-intl/tsconfig.json
+++ b/packages/inula-intl/tsconfig.json
@@ -23,6 +23,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "jsx": "preserve",
+    "jsxImportSource": "openinula",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": true,
@@ -56,7 +57,8 @@
   },
   "include": [
     "./index.ts",
-
+    "./global.d.ts",
+    "./tests/**/*"
   ],
   "exclude": [
     "node_modules",
