--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "inula",
   "description": "Inula is a JavaScript framework library.",
   "private": true,
+  "packageManager": "pnpm@10.4.1",
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "lint-commit": "lint-staged",
     "prettier": "prettier .prettierrc.js -w packages/**/*.{ts,tsx,js,jsx}",
+    "build": "turbo build",
+    "test": "turbo test",
+    "release": "pnpm run build && changeset publish",
     "build:inula": "pnpm -F openinula build",
     "test:inula": "pnpm -F openinula test",
     "test:inula-intl": "pnpm -F inula-intl test",
@@ -52,6 +56,7 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-typescript": "7.23.3",
     "@babel/runtime": "7.23.8",
+    "@changesets/cli": "^2.28.1",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@rollup/plugin-babel": "^6.0.4",
@@ -78,6 +83,7 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.1.1",
+    "turbo": "^2.4.2",
     "typescript": "^4.9.5"
   },
   "engines": {
