fix: ci release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         uses: changesets/action@v1
         with:
           version: pnpm exec changeset version
-          publish: pnpm exec changeset publish
+          publish: pnpm exec changeset publish --access public
           commit: "chore(release): release in ci"
           title: "chore(release): release in ci"
         env:
