fix: add dependency for build

--- a/turbo.json
+++ b/turbo.json
@@ -20,6 +20,18 @@
         "^typecheck"
       ],
       "outputs": []
+    },
+    "inula-router#build": {
+      "dependsOn": [
+        "openinula#build"
+      ],
+      "outputs": []
+    },
+    "inula-intl#build": {
+      "dependsOn": [
+        "openinula#build"
+      ],
+      "outputs": []
     }
   }
 }
