--- a/turbo.json
+++ b/turbo.json
@@ -30,6 +30,11 @@
       "dependsOn": [
         "openinula#build"
       ]
+    },
+    "inula-request#build": {
+      "dependsOn": [
+        "openinula#build"
+      ]
     }
   }
 }
