chore: remove next-router

--- a/next-packages/compiler/reactivity-parser/package.json
+++ b/next-packages/compiler/reactivity-parser/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsup --sourcemap",
     "type-check": "tsc --noEmit",
-    "test": "vitest --ui"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
