--- a/next-packages/inula-bridge/package.json
+++ b/next-packages/inula-bridge/package.json
@@ -16,7 +16,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup --sourcemap",
-    "test": "vitest --ui",
+    "test": "vitest run",
     "dev": "vite",
     "dev:build": "vite build"
   },
