--- a/next-packages/compiler/jsx-parser/package.json
+++ b/next-packages/compiler/jsx-parser/package.json
@@ -14,7 +14,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "tsup --sourcemap",
-    "test": "vitest --ui"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
