--- a/next-packages/compiler/reactivity-parser/package.json
+++ b/next-packages/compiler/reactivity-parser/package.json
@@ -14,8 +14,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "tsup --sourcemap",
-    "type-check": "tsc --noEmit",
-    "test": "vitest run"
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
