--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,10 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          version: pnpm exec changeset version
+          version: |
+            pnpm exec changeset version
+            # Need to update lock file
+            pnpm install --lockfile-only
           publish: pnpm exec changeset publish --access public
           commit: "chore(release): release in ci"
           title: "chore(release): release in ci"
