--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:inula-request": "pnpm -F inula-request build",
     "build:inula-router": "pnpm -F inula-router build",
     "commitlint": "commitlint --config commitlint.config.js -e",
+    "version": "pnpm exec changeset version && pnpm install --lockfile-only",
     "postinstall": "husky install"
   },
   "lint-staged": {
