--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.1.1",
     "turbo": "^2.4.2",
-    "typescript": "^4.9.5"
+    "typescript": "~5.5.4"
   },
   "engines": {
     "node": ">=10.x",
