--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inula",
   "description": "Inula is a JavaScript framework library.",
   "private": true,
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.9.0",
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "lint-commit": "lint-staged",
@@ -84,7 +84,7 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.1.1",
-    "turbo": "^2.4.2",
+    "turbo": "2.5.0",
     "typescript": "~5.5.4"
   },
   "engines": {
