--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "horizon",
-  "description": "Horizon is a JavaScript framework library.",
+  "name": "inula",
+  "description": "Inula is a JavaScript framework library.",
   "private": true,
+  "packageManager": "pnpm@10.9.0",
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "lint-commit": "lint-staged",
     "prettier": "prettier .prettierrc.js -w packages/**/*.{ts,tsx,js,jsx}",
-    "build:inula": "pnpm -F @cloudsop/horizon build",
-    "test:inula": "pnpm -F @cloudsop/horizon test",
-    "test:inula-intl": "pnpm -F @cloudsop/horizon-intl test",
-    "test:inula-request": "pnpm -F @cloudsop/horizon-request test",
-    "test:inula-router": "pnpm -F @cloudsop/horizon-router test",
-    "build:inula-cli": "pnpm -F @cloudsop/horizon-cli build",
-    "build:inula-intl": "pnpm -F @cloudsop/horizon-intl rollup-build",
-    "build:inula-request": "pnpm -F @cloudsop/horizon-request build",
-    "build:inula-router": "pnpm -F @cloudsop/horizon-router build",
+    "build:inula": "pnpm -F openinula build",
+    "test:inula": "pnpm -F openinula test",
+    "test:inula-intl": "pnpm -F inula-intl test",
+    "test:inula-request": "pnpm -F inula-request test",
+    "test:inula-router": "pnpm -F inula-router test",
+    "build:inula-cli": "pnpm -F inula-cli build",
+    "build:inula-intl": "pnpm -F inula-intl build",
+    "build:inula-request": "pnpm -F inula-request build",
+    "build:inula-router": "pnpm -F inula-router build",
     "commitlint": "commitlint --config commitlint.config.js -e",
     "postinstall": "husky install"
   },
@@ -45,6 +46,7 @@
     "@babel/plugin-transform-parameters": "7.23.3",
     "@babel/plugin-transform-react-jsx": "7.23.4",
     "@babel/plugin-transform-react-jsx-source": "^7.23.3",
+    "@babel/plugin-transform-regenerator": "7.23.3",
     "@babel/plugin-transform-runtime": "7.23.7",
     "@babel/plugin-transform-shorthand-properties": "7.23.3",
     "@babel/plugin-transform-spread": "7.23.3",
@@ -57,12 +59,11 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.11",
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "6.19.1",
-    "@babel/parser": "^7.24.7",
-    "magic-string": "^0.30.10",
+    "@typescript-eslint/parser": "6.18.1",
     "babel-jest": "^29.7.0",
     "ejs": "^3.1.8",
     "eslint": "^8.56.0",
@@ -76,6 +77,7 @@
     "prettier": "^3.1.1",
     "rollup": "^2.79.1",
     "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
