--- a/packages/inula-adapter/package.json
+++ b/packages/inula-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cloudsop/horizon-adapter",
+  "name": "inula-adapter",
   "version": "0.0.1",
   "description": "vue adapter",
   "main": "./vue/cjs/vue-adapter.js",
@@ -18,7 +18,7 @@
     "build-types": "tsc -p tsconfig.vue.json && tsc -p tsconfig.pinia.json && tsc -p tsconfig.vuex.json && rollup -c ./scripts/build-types.js"
   },
   "dependencies": {
-    "@cloudsop/horizon": "file:../inula/build/horizon",
+    "openinula": "file:../inula/build/inula",
     "react": "^18.3.1"
   },
   "devDependencies": {
@@ -49,15 +49,16 @@
     "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^29.5.14",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^0.34.5",
+    "jsdom": "^24.0.0",
     "prettier": "2.8.8",
     "rollup": "2.79.1",
     "rollup-plugin-dts": "^6.0.1",
     "rollup-plugin-terser": "^5.1.3",
     "typescript": "4.9.3",
-    "@vitest/ui": "^0.34.5",
-    "jsdom": "^24.0.0",
-    "vitest": "^0.34.5",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@testing-library/user-event": "^12.1.10"
+    "vitest": "^0.34.5"
   }
 }
