chore: fix dependency to caret range

--- a/next-packages/compiler/babel-inula-next-core/package.json
+++ b/next-packages/compiler/babel-inula-next-core/package.json
@@ -35,11 +35,11 @@
     "@babel/plugin-syntax-typescript": "^7.23.3",
     "@babel/traverse": "^7.24.1",
     "@babel/types": "^7.24.0",
-    "@openinula/babel-api": "workspace:*",
-    "@openinula/jsx-view-parser": "workspace:*",
-    "@openinula/reactivity-parser": "workspace:*",
-    "@openinula/view-generator": "workspace:*",
-    "@openinula/error-handler": "workspace:*",
+    "@openinula/babel-api": "workspace:^",
+    "@openinula/jsx-view-parser": "workspace:^",
+    "@openinula/reactivity-parser": "workspace:^",
+    "@openinula/view-generator": "workspace:^",
+    "@openinula/error-handler": "workspace:^",
     "@types/babel-types": "^7.0.15",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__traverse": "^7.6.8",
