--- a/next-packages/compiler/error-handler/package.json
+++ b/next-packages/compiler/error-handler/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "tsup": "^6.7.0",
     "typescript": "^5.3.2",
-    "@openinula/babel-api": "workspace:*"
+    "@openinula/babel-api": "workspace:^"
   },
   "tsup": {
     "entry": [
