--- a/next-packages/compiler/unplugin-inula-next/package.json
+++ b/next-packages/compiler/unplugin-inula-next/package.json
@@ -85,8 +85,8 @@
     "@types/node": "^22.13.1",
     "@babel/code-frame": "^7.26.2",
     "@babel/core": "^7.20.12",
-    "@openinula/babel-preset-inula-next": "workspace:*",
-    "@openinula/error-handler": "workspace:*",
+    "@openinula/babel-preset-inula-next": "workspace:^",
+    "@openinula/error-handler": "workspace:^",
     "bumpp": "^10.0.2",
     "minimatch": "^9.0.3",
     "nodemon": "^3.1.9",
