--- a/next-packages/compiler/view-generator/package.json
+++ b/next-packages/compiler/view-generator/package.json
@@ -23,12 +23,12 @@
     "@types/node": "^20.10.5",
     "tsup": "^6.7.0",
     "typescript": "^5.3.2",
-    "@openinula/reactivity-parser": "workspace:*"
+    "@openinula/reactivity-parser": "workspace:^"
   },
   "dependencies": {
-    "@openinula/error-handler": "workspace:*",
-    "@openinula/next-shared": "workspace:*",
-    "@openinula/babel-api": "workspace:*"
+    "@openinula/error-handler": "workspace:^",
+    "@openinula/next-shared": "workspace:^",
+    "@openinula/babel-api": "workspace:^"
   },
   "tsup": {
     "entry": [
