--- a/next-packages/inula-bridge/package.json
+++ b/next-packages/inula-bridge/package.json
@@ -30,14 +30,14 @@
     "@babel/traverse": "^7.24.1",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.6.4",
-    "@openinula/babel-preset-inula-next": "workspace:*",
+    "@openinula/babel-preset-inula-next": "workspace:^",
     "@openinula/unplugin": "workspace:^",
     "@types/webpack": "4",
     "@vitejs/plugin-react": "^3.1.0",
     "webpack": "4"
   },
   "devDependencies": {
-    "@openinula/next": "workspace:*",
+    "@openinula/next": "workspace:^",
     "openinula": "^0.1.0",
     "tsup": "^6.5.0",
     "vite": "^5.4.10",
