--- a/next-packages/runtime/package.json
+++ b/next-packages/runtime/package.json
@@ -34,7 +34,7 @@
     "tsup": "^6.5.0",
     "vitest": "2.0.5",
     "vite": "^5.4.10",
-    "@openinula/unplugin": "workspace:*"
+    "@openinula/unplugin": "workspace:^"
   },
   "tsup": {
     "entry": [
